syntax="proto3";

import "graphql-grpc-edge/graphql/graphql.proto";

package sample;

enum HelloType {
    NONE = 0;
    ANY = 1;
}

message Error {
    string error_message = 1;
}

message HelloSender {
    enum SenderType {
        PUBLIC = 0;
        FRIEND = 1;
    }
    string name = 1;
    string last_name = 2;
    SenderType type = 3;
}

message Hello {
    string name = 1;
    HelloType type = 2;
    repeated string messages = 3;
    HelloSender sender = 4;
}

message ServerError {
    int32 code = 1;
    string decription = 2;
}

message FieldValidationError {
    string field = 1;
    string error = 2;
}

message ValidationError {
    repeated FieldValidationError fields = 1;
}

message HelloResponse {
    Hello data = 1;
    oneof error {
        ServerError exception = 2;
        ValidationError form_error = 3;
    };
}

message HelloRequest {
    string name = 1;
}

service HelloService {
    rpc Greeting(HelloRequest) returns (HelloResponse) {
        option (graphql.type) = {
            query: "greeting"
        };
    }

    rpc SetGreeting(Hello) returns (HelloResponse) {
        option (graphql.type) = {
            mutation: "setGreeting"
        };
    }
}
